# Praktikum-Struktur-Data

./: tugas.cpp
Bengkel/: data.cpp  data.h  main.cpp
Bengkel/database/: customers.csv  mechanics.csv  services.csv
Bengkel/utils/: helper.cpp  helper.h
imgui/: CMakeLists.txt  imgui.ini
imgui/src/: data.h  main.cpp
imgui/src/controller/: customer.cpp  customer.h  mechanic.cpp  mechanic.h  service.cpp  service.h
imgui/src/database/: customers.csv  mechanics.csv  services.csv
imgui/src/ui/: style.cpp  style.h
imgui/src/ui/view/: admin_view.cpp  admin_view.h  customer_view.cpp  customer_view.h
imgui/src/utils/: helper.cpp  helper.h
